test/langtools/tools/javac/patterns/GuardsErrors.out
GuardsErrors.java:36:38: compiler.err.cant.ref.non.effectively.final.var: check, (compiler.misc.guard)
1 error
